Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/AAIController.h

	DOTNET_EXPORT auto E_PROP_AAIController_bAIIgnorePlayers_GET() { return AAIController::bAIIgnorePlayers; }
	
	DOTNET_EXPORT auto E_PROP_AAIController_BrainComponent_GET(AAIController* Ptr) { return ConvertToManage_ObjectPointerDescription(Ptr->BrainComponent); }
	DOTNET_EXPORT void E_PROP_AAIController_BrainComponent_SET(AAIController* Ptr, UBrainComponent* Value) { Ptr->BrainComponent = Value; }
	
	
	DOTNET_EXPORT INT_PTR E_NewObject_AAIController(UObject* Parent, char* Name)
	{
		return (INT_PTR)NewObject<AAIController>(Parent, FName(UTF8_TO_TCHAR(Name)));
	}
	DOTNET_EXPORT auto E_AAIController_AreAIIgnoringPlayers(AAIController* Self)
	{
		return Self->AreAIIgnoringPlayers();
	}
	DOTNET_EXPORT auto E_AAIController_GetActionsComp(AAIController* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->GetActionsComp());
	}
	DOTNET_EXPORT auto E_AAIController_GetBrainComponent(AAIController* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->GetBrainComponent());
	}
	DOTNET_EXPORT auto E_AAIController_GetCurrentMoveRequestID(AAIController* Self)
	{
		return (INT_PTR) new FAIRequestID(Self->GetCurrentMoveRequestID());
	}
	DOTNET_EXPORT auto E_AAIController_GetDebugIcon(AAIController* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetDebugIcon());
	}
	DOTNET_EXPORT auto E_AAIController_GetFocalPoint(AAIController* Self)
	{
		return (INT_PTR) new FVector(Self->GetFocalPoint());
	}
	DOTNET_EXPORT auto E_AAIController_GetFocalPointOnActor(AAIController* Self, AActor* Actor)
	{
		auto _p0 = Actor;
		return (INT_PTR) new FVector(Self->GetFocalPointOnActor(_p0));
	}
	DOTNET_EXPORT auto E_AAIController_GetFocusActor(AAIController* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->GetFocusActor());
	}
	DOTNET_EXPORT auto E_AAIController_GetGameplayTaskDefaultPriority(AAIController* Self)
	{
		return Self->GetGameplayTaskDefaultPriority();
	}
	DOTNET_EXPORT auto E_AAIController_GetImmediateMoveDestination(AAIController* Self)
	{
		return (INT_PTR) new FVector(Self->GetImmediateMoveDestination());
	}
	DOTNET_EXPORT auto E_AAIController_HasPartialPath(AAIController* Self)
	{
		return Self->HasPartialPath();
	}
	DOTNET_EXPORT auto E_AAIController_K2_ClearFocus(AAIController* Self)
	{
		Self->K2_ClearFocus();
	}
	DOTNET_EXPORT auto E_AAIController_K2_SetFocalPoint(AAIController* Self, INT_PTR FP)
	{
		auto _p0 = *(FVector*)FP;
		Self->K2_SetFocalPoint(_p0);
	}
	DOTNET_EXPORT auto E_AAIController_K2_SetFocus(AAIController* Self, AActor* NewFocus)
	{
		auto _p0 = NewFocus;
		Self->K2_SetFocus(_p0);
	}
	DOTNET_EXPORT auto E_AAIController_PauseMove(AAIController* Self, INT_PTR RequestToPause)
	{
		auto _p0 = *(FAIRequestID*)RequestToPause;
		return Self->PauseMove(_p0);
	}
	DOTNET_EXPORT auto E_AAIController_ResumeMove(AAIController* Self, INT_PTR RequestToResume)
	{
		auto _p0 = *(FAIRequestID*)RequestToResume;
		return Self->ResumeMove(_p0);
	}
	DOTNET_EXPORT auto E_AAIController_SetFocalPoint(AAIController* Self, INT_PTR NewFocus)
	{
		auto _p0 = *(FVector*)NewFocus;
		Self->SetFocalPoint(_p0);
	}
	DOTNET_EXPORT auto E_AAIController_SetFocus(AAIController* Self, AActor* NewFocus)
	{
		auto _p0 = NewFocus;
		Self->SetFocus(_p0);
	}
	DOTNET_EXPORT auto E_AAIController_SetMoveBlockDetection(AAIController* Self, bool bEnable)
	{
		auto _p0 = bEnable;
		Self->SetMoveBlockDetection(_p0);
	}
	DOTNET_EXPORT auto E_AAIController_SuggestTossVelocity(AAIController* Self, INT_PTR OutTossVelocity, INT_PTR Start, INT_PTR End, float TossSpeed, bool bPreferHighArc, float CollisionRadius, bool bOnlyTraceUp)
	{
		auto& _p0 = *(FVector*)OutTossVelocity;
		auto _p1 = *(FVector*)Start;
		auto _p2 = *(FVector*)End;
		auto _p3 = TossSpeed;
		auto _p4 = bPreferHighArc;
		auto _p5 = CollisionRadius;
		auto _p6 = bOnlyTraceUp;
		return Self->SuggestTossVelocity(_p0, _p1, _p2, _p3, _p4, _p5, _p6);
	}
	DOTNET_EXPORT auto E_AAIController_ToggleAIIgnorePlayers(AAIController* Self)
	{
		Self->ToggleAIIgnorePlayers();
	}
	DOTNET_EXPORT auto E_AAIController_UpdateControlRotation(AAIController* Self, float DeltaTime, bool bUpdatePawn)
	{
		auto _p0 = DeltaTime;
		auto _p1 = bUpdatePawn;
		Self->UpdateControlRotation(_p0, _p1);
	}